k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: myapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: myapp

  template:
    metadata:
      labels:
        app: myapp

    spec:
      containers:
        - name: myapp
          image: ghcr.io/kravtmk/myapp-deploy-lab:06e8d53fe2dff3a20e57a75512959cb0823acf62
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
