k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapp
  namespace: myapp

spec:
  ingressClassName: traefik

  rules:
    - host: myapp.infrahome.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
